--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,5 @@ version_forge=10.13.2.1291
 version_minforge=10.13.2.1230
 # version_mappings=stable_12
 
-extra_modsio_id=-1
-extra_curseforge_id=-1
+extra_modsio_id=1143
+extra_curseforge_id=230509
